--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-etag": "^2.0.0",
     "koa-favicon": "^1.2.0",
     "koa-fresh": "0.0.3",
+    "koa-logger": "^1.3.0",
     "koa-mount": "^1.3.0",
     "koa-path-match": "^1.0.1",
     "koa-static": "^1.5.1"
