--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-logger": "^1.3.0",
     "koa-mount": "^1.3.0",
     "koa-path-match": "^1.0.1",
-    "koa-static": "^1.5.1"
+    "koa-static": "^1.5.1",
+    "koa-timer": "^1.0.0"
   }
 }
