--- a/package.json
+++ b/package.json
@@ -24,6 +24,18 @@
     "koa-mount": "^1.3.0",
     "koa-path-match": "^1.0.1",
     "koa-static": "^1.5.1",
-    "koa-timer": "^1.0.0"
+    "koa-timer": "^1.0.0",
+    "react": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "react-router": "^0.13.4",
+    "redux": "^3.0.2"
+  },
+  "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "chai": "^3.3.0",
+    "mocha": "^2.3.3",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   }
 }
