--- a/package.json
+++ b/package.json
@@ -28,14 +28,46 @@
     "react": "^0.14.0",
     "react-redux": "^4.0.0",
     "react-router": "^0.13.4",
-    "redux": "^3.0.2"
+    "redux": "^3.0.2",
+    "whatwg-fetch": "^0.10.0"
   },
   "devDependencies": {
     "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "chai": "^3.3.0",
+    "css-loader": "^0.19.0",
+    "cssnano": "^3.3.1",
+    "eslint": "^1.7.1",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-config-standard-react": "^1.1.0",
+    "eslint-plugin-react": "^3.5.1",
+    "eslint-plugin-standard": "^1.3.1",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "istanbul": "^0.4.0",
+    "json-loader": "^0.5.3",
     "mocha": "^2.3.3",
+    "postcss-cssnext": "^2.1.0",
+    "postcss-import": "^7.0.0",
+    "postcss-loader": "^0.6.0",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
+  },
+  "engines": {
+    "node": "4"
+  },
+  "keywords": [
+    "starter",
+    "koajs",
+    "generators"
+  ],
+  "babel": {
+    "stage": 0,
+    "optional": [
+      "runtime"
+    ]
   }
 }
