--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "koa-static": "^1.5.1",
     "koa-timer": "^1.0.0",
     "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
     "react-router": "^0.13.4",
     "redux": "^3.0.2",
